--- a/.github/workflows/build-and-push-image.yml
+++ b/.github/workflows/build-and-push-image.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v1 
         with:
-          username: commanderturt
+          username: boons8858
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Login to GitHub Container Registry
@@ -40,7 +40,7 @@ jobs:
         with:
           push: true
           tags: |
-            mjmeli/${{ github.event.repository.name }}:latest
+            boons8858/${{ github.event.repository.name }}:latest
             ghcr.io/${{ github.repository }}:latest
             ghcr.io/${{ github.repository }}:${{ github.sha }}
 
